--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "openai": "^4.87.3",
+    "say": "^0.16.0",
     "vscode": "^1.1.37"
   },
   "scripts": {
